<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
       <item android:title="@string/bn"
             android:id="@+id/grises"
             android:icon="@android:drawable/ic_menu_manage"/>
    
       <item android:title="@string/sepia"
             android:id="@+id/sepia"
             android:icon="@android:drawable/ic_menu_edit"/>
       
       <item android:title="@string/reset"
             android:id="@+id/reset"
             android:icon="@android:drawable/ic_menu_revert"/>
       
       <item android:title="@string/gcambio"
             android:id="@+id/saveChanges"
             android:icon="@android:drawable/ic_menu_save"/>
       
       <item android:title="@string/compartir"
             android:id="@+id/share"
             android:icon="@android:drawable/ic_menu_share"/>
       
       <item android:title="@string/dibujar"
             android:id="@+id/dibujar"
             android:icon="@android:drawable/ic_menu_edit"/>

</menu>