<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="2"
    android:fillViewport="true"
    android:background="#008080"
    android:gravity="top" >
    
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#008080" >
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_gravity="center_vertical|center_horizontal"
        android:id="@+id/imagenDisplay"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"/>
    
    <Button
        android:id="@+id/btnEliminar"
        style="@style/button_text"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/grey_button"
        android:text="@string/eliminarDescartar"
	    android:onClick="eliminarImagen" />
   
    <Button
        android:id="@+id/btnCompartir"
        style="@style/button_text"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/grey_button"
        android:text="@string/compartir"
	    android:onClick="compartirImagen" />
    
    <Button
        android:id="@+id/btnDibujar"
        style="@style/button_text"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/grey_button"
        android:text="@string/dibujar"
	    android:onClick="dibujarImagen" />
    
    
</LinearLayout>
</ScrollView>