<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
 
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
 
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:weightSum="1"
            android:layout_weight="0.5">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/botonImagen"
                    android:text="@string/addImagen"
                    android:textSize="16sp"
                    android:gravity="center|bottom"
                    android:singleLine="false"
                    android:paddingBottom="10dp"
                    android:onClick="listarImagenes"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/imagen_icon"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
           <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/botonImagenOtros"
                    android:text="@string/addImagenOtros"
                    android:textSize="16sp"
                    android:gravity="center|bottom"
                    android:singleLine="false"
                    android:paddingBottom="10dp"
                    android:onClick="addImagen"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/camera_icon"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
        </TableRow>
 
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:weightSum="1"
            android:layout_weight="0.5">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/botonSonido"
                    android:text="@string/addSonido"
                    android:textSize="16sp"
                    android:gravity="center|bottom"
                    android:singleLine="false"
                    android:paddingBottom="10dp"
                    android:onClick="listarSonidos"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sonido_icon"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/botonCrearVideo"
                    android:text="@string/goVideo"
                    android:textSize="16sp"
                    android:gravity="center|bottom"
                    android:paddingBottom="10dp"
                    android:onClick="generateVideo"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/go_icon"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>            
        </TableRow>
 
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:weightSum="1"
            android:layout_weight="0.5">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/botonVerVideo"                    
                    android:text="@string/verVideo"
                    android:textSize="16sp"
                    android:gravity="center|bottom"
                    android:paddingBottom="10dp"
                    android:onClick="verVideo"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/play_icon"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>            
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/buttonLista"                    
                    android:text="@string/verListaVideo"
                    android:textSize="16sp"
                    android:gravity="center|bottom"
                    android:paddingBottom="10dp"
                    android:onClick="verListaVideo"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/lista_icon"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
        </TableRow>
 
    </TableLayout>
 
</LinearLayout>

